--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,3 @@
-DirectoryIndex indexLoginLogoffTema5.php
+DirectoryIndex indexLoginLogffTema5.php
 ErrorDocument 403 /error/403.html
 ErrorDocument 404 /error/404.html
-ErrorDocument 500 /error/500.html
